--- a/video2/index.html
+++ b/video2/index.html
@@ -115,7 +115,7 @@
 <script src="demos/outro/sketch.js"></script>
 <script src="demos/trees/sketch.js"></script>
 <script src="demos/heart_recursion/sketch.js"></script>
-<script src="demos/bomb/bomb.js"></script>
+<script src="demos/bomb_old/bomb.js"></script>
 <script>
 
   $(document).ready( function () {
